--- a/overlay/cluster-logging-6.2/kustomization.yaml
+++ b/overlay/cluster-logging-6.2/kustomization.yaml
@@ -7,20 +7,32 @@ resources:
   - ../log-storage-base
 
 patches:
-  - target:
-      kind: Application
-      name: cluster-logging-operator
-    path: cluster-logging-operator-application-patch.yaml
-  - target:
-      kind: Application
-      name: loki-operator
-    path: loki-operator-application-patch.yaml
   - patch: |-
       - op: replace
         path: /spec/source/git/revision
         value: release-6.2
     target:
       kind: Component
+  - patch: |-
+      - op: replace
+        path: /spec/description
+        value: "Pipeline for Cluster Logging Operator 6.2"
+      - op: replace
+        path: /spec/displayName
+        value: "Cluster Logging Operator 6.2"
+    target:
+      kind: Application
+      labelSelector: "obs.logging.component=log-collection"
+  - patch: |-
+      - op: replace
+        path: /spec/description
+        value: "Pipeline for Cluster Logging Operator 6.2"
+      - op: replace
+        path: /spec/displayName
+        value: "Cluster Logging Operator 6.2"
+    target:
+      kind: Application
+      labelSelector: "obs.logging.component=log-storage"
   - patch: |-
       - op: replace
         path: /spec/application
@@ -35,43 +47,3 @@ patches:
     target:
       kind: Component
       labelSelector: "obs.logging.component=log-storage"
-  # - target:
-  #     kind: Component
-  #   path: component-patch.yaml
-  # - target:
-  #     kind: Component
-  #     name: assisted.*
-  #   path: ocm-branch-patch.yaml
-  # - target:
-  #     kind: Component
-  #     name: hypershift-release.*
-  #   path: openshift-branch-patch.yaml
-  # - target:
-  #     kind: Component
-  #     name: cluster-api.*
-  #   path: openshift-branch-patch.yaml
-  # - target:
-  #     kind: Component
-  #     name: hive.*
-  #   path: hive-branch-patch.yaml
-  # - patch: |-
-  #     - op: replace
-  #       path: /spec/source/git/revision
-  #       value: release-4.17
-  #   target:
-  #     kind: Component
-  #     name: "apiserver-network-proxy.*"
-  # - patch: |-
-  #     - op: replace
-  #       path: /spec/source/git/revision
-  #       value: release-ocm-2.12
-  #   target:
-  #     kind: Component
-  #     name: "cluster-api-provider-agent.*"
-  # - patch: |-
-  #     - op: replace
-  #       path: /spec/source/git/revision
-  #       value: master
-  #   target:
-  #     kind: Component
-  #     name: "aws-encryption-provider.*"
