--- a/overlay/v4.16-file-based-catalogs/kustomization.yaml
+++ b/overlay/v4.16-file-based-catalogs/kustomization.yaml
@@ -11,9 +11,15 @@ patches:
       - op: replace
         path: /spec/application
         value: cluster-logging-catalog-v4-16
+      - op: replace
+        path: /spec/displayName
+        value: Cluster Logging File Based Catalogs for OCP v4.16
     target: 
-      kind: Component
+      kind: Application
   - patch: |-
+      - op: replace
+        path: /spec/application
+        value: cluster-logging-catalog-v4-16
       - op: replace
         path: /spec/componentName
         value: cluster-logging-fbc-v4-16
@@ -22,26 +28,9 @@ patches:
         value: https://github.com/jcantril/konflux-cluster-logging-catalog
       - op: replace
         path: /spec/source/git/context
-        value: v4.16/cluster-logging
+        value: v4.16
       - op: replace
         path: /spec/source/git/dockerfileUrl
-        value: v4.16/cluster-logging/Dockerfile
+        value: v4.16/Dockerfile
     target:
       kind: Component
-      labelSelector: "obs.logging.package=cluster-logging"
-  - patch: |-
-      - op: replace
-        path: /spec/componentName
-        value: loki-operator-fbc-v4-16
-      - op: replace
-        path: /spec/source/git/url
-        value: https://github.com/jcantril/konflux-cluster-logging-catalog
-      - op: replace
-        path: /spec/source/git/context
-        value: v4.16/loki-operator
-      - op: replace
-        path: /spec/source/git/dockerfileUrl
-        value: v4.16/loki-operator/Dockerfile
-    target:
-      kind: Component
-      labelSelector: "obs.logging.package=loki-operator"
